--- a/index.html
+++ b/index.html
@@ -6,11 +6,29 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>food-network-main</title>
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Anton&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="style.css">
 </head>
 
 <body>
+    <section class="top-banner">
+        <div class="half-width">
+            <h1><span class="orange-color">Skip</span> The Diet,</h1>
+            <h1>Just Eat Healthy
 
+                With Food Network</h1>
+            <h3>Imagine you don't need a diet because we provide
+
+                healthy and delicious food for you!</h3>
+            <a class="link-button" target="_blank" href="https://www.facebook.com/BurfeBangladesh/">Order Now</a>
+        </div>
+        <div class="half-width">
+            <img src="images/guy-eats-hot-dog-which-himself-has-prepared-street-food-young-man-blue-shirt-eats-hot-dog-white-background-100449486-removebg-preview.png"
+                alt="">
+        </div>
+    </section>
 </body>
 
 </html>
