contact me added

--- a/index.html
+++ b/index.html
@@ -29,6 +29,20 @@
                 alt="">
         </div>
     </section>
+    <section class="about-me">
+        <div class="half-width">
+            <img src="images/31602633-happy-man-with-unhealthy-burger-sandwich-in-hand-get-ready-to-eat-isolated-on-a-white-background-fas-removebg-preview.png"
+                alt="">
+        </div>
+        <div class="half-width">
+            <h1>About Me</h1>
+            <p>There are hundreds of “birth of the burger” stories surrounding the ground beef patty on a bun – one of
+                which has its roots right here in Northeast Ohio.</p>
+            <a class="link-button" target="_blank"
+                href="https://www.facebook.com/profile.php?id=100013278557909">Contact Me </a>
+        </div>
+
+    </section>
 </body>
 
 </html>
