--- a/index.html
+++ b/index.html
@@ -43,6 +43,42 @@
         </div>
 
     </section>
+    <section id="recipie-zone">
+
+        <div class="recipie">
+            <div>
+                <img src="images/food1.png" alt="">
+            </div>
+            <div>
+                <h1>Classic Chicken</h1>
+                <p class="color-grey">American Chinese <span class="bold">Classic Chicken </span> haring our secrets for
+                    making restaurant quality burgers, from the juiciest burger patties to the best buns and burger ..
+                </p>
+            </div>
+        </div>
+        <div class="recipie">
+            <div>
+                <img src="images/food2.png" alt="">
+            </div>
+            <div>
+                <h1>Beef mashroom caramel</h1>
+                <p class="color-grey">French <span class="bold">Beef mashroom caramel</span> A hamburger (also burger
+                    for short) is a food, typically considered a sandwich, consisting of one or more cooked patties of
+                    ground meat, usually beef, placed inside a sliced bread roll or bun. The patty may be pan fried,
+                    grilled, smoked or flame broiled. ... A hamburger topped with cheese is called a cheeseburger.</p>
+            </div>
+        </div>
+        <div class="recipie">
+            <div>
+                <img src="images/food3.png" alt="">
+            </div>
+            <div>
+                <h1>Classic Beef</h1>
+                <p class="color-grey"><span class="bold">Classic Beef</span> heeseburgers · “Tasty, delicious, and has
+                    me craving more on the first bite.” to “ ...</p>
+            </div>
+        </div>
+    </section>
 </body>
 
 </html>
